// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`api/queries/useGetMainPoolTotalXvsDistributed > returns data in the correct format 1`] = `
{
  "totalXvsDistributedWei": "3.110919e+24",
}
`;

exports[`api/queries/useGetMainPoolTotalXvsDistributed returns data in the correct format 1`] = `
Object {
  "totalXvsDistributedWei": "3.110919e+24",
}
`;
